<resources>
    <string name="app_name">知识问答</string>
    <string name="question_text">Hello World</string>
    <string name="input_topic">请输入题目</string>
    <string name="correct">对</string>
    <string name="wrong">错</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>
    <string name="show_true">答对了</string>
    <string name="show_false">答错了</string>
    <string name="submit">提交</string>
    <string name="confirm_cheat">你确定要作弊吗</string>
    <string name="cheat">作弊</string>
    <string name="has_x_topic">题库中共有x道题目表</string>
    <string name="start_answer">开始答题</string>
    <string name="add_topic">添加题目</string>
    <string name="check">查看题目情况</string>
    <string name="all">查看全部题目</string>
    <string name="clear">清除所有题目表</string>

    <string name="q1">中国的首都是北京</string>
    <string name="q2">太平洋比大西洋大</string>
    <string name="q3">苏伊士运河连接红海和地中海</string>
    <string name="q4">尼罗河源头位于罗马</string>
    <string name="q5">亚马逊河是英国最长的河流</string>
    <string name="q6">死海是世界上最古老及最深的淡水湖</string>
    <string name="q7">潘长江是中国最长的河流</string>

    <string name="next">next</string>
    <string name="last">last</string>
</resources>