<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".activities.StartActivity"
              android:gravity="center">

    <TextView android:id="@+id/start_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/has_x_topic"/>

    <Button android:id="@+id/start_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_answer"
            android:layout_marginTop="20dp"/>
    <Button android:id="@+id/start_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_topic"
            android:layout_marginTop="20dp"/>
    <Button android:id="@+id/start_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_marginTop="20dp"/>
    <Button android:id="@+id/start_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_marginTop="20dp"/>
</LinearLayout>