<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activities.MainActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="center">
        <TextView android:id="@+id/question_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/question_text"
                  android:textSize="30sp"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center"
                      android:layout_marginTop="50dp">
            <Button android:id="@+id/true_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_button"
                    android:layout_marginEnd="20dp"/>

            <Button android:id="@+id/false_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false_button"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>

        <Button android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/submit"/>

        <Button android:id="@+id/cheat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cheat"/>


        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="horizontal"
                      android:layout_marginTop="50dp">
            <ImageButton android:id="@+id/last_imagebutton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:src="@drawable/ic_arrow_left"
                         android:contentDescription="@string/last"/>
            <ImageButton android:id="@+id/next_imagebutton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:src="@drawable/ic_arrow_right"
                         android:contentDescription="@string/next"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>