<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".activities.AddActivity">

    <EditText android:id="@+id/add_text"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="15"
              android:inputType="textMultiLine"
              android:hint="@string/input_topic"
              android:textAlignment="gravity"
              android:gravity="center|start"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="15"
                  android:orientation="vertical">

        <RadioGroup android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:layout_marginTop="20dp">
                <RadioButton android:id="@+id/true_choice"
                             android:text="@string/correct"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="20dp"/>
                <RadioButton android:id="@+id/false_choice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/wrong"
                             android:layout_marginStart="20dp"/>
            </LinearLayout>
        </RadioGroup>

        <Button android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/submit"/>
    </LinearLayout>
</LinearLayout>